# ghost-feather

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  arm-none-eabi-toolchain.cmake  build.sh
app/: CMakeLists.txt  app.c  app.h
app/stm32f722xx/: app.c  stm32f722xx_app.c  stm32f722xx_app.h
bootloader/: CMakeLists.txt
bootloader/inc/: bootloader.h
bootloader/src/: bootloader.c
bootloader/stm32f722xx/: stm32f722xx_first_bootloader.c  stm32f722xx_first_bootloader.h
bootloader/stm32f722xx/first_bootloader/: stm32f722xx_first_bootloader.c  stm32f722xx_first_bootloader.h
bootloader/stm32f722xx/second_bootloader/: stm32f722xx_second_bootloader.c  stm32f722xx_second_bootloader.h
controller/: CMakeLists.txt
controller/bmi270/: bmi270.c  bmi270.h  bmi270_conf.c  bmi270_conf.h
controller/motor/: motor_ctrl.c  motor_ctrl.h
controller/pid/: pid_ctrl.c  pid_ctrl.h
controller/rf/: rf_ctrl.c  rf_ctrl.h
controller/spi/: spi_controller.c  spi_controller.h  spi_ctrl.c  spi_ctrl.h
controller/tim/: tim_ctrl.c  tim_ctrl.h  tim_ctrl_adv.h  tim_ctrl_advx.c  tim_ctrl_advx.h  tim_ctrl_base.h  tim_ctrl_basex.c  tim_ctrl_basex.h  tim_ctrl_common.h  tim_ctrl_gp.h  tim_ctrl_gpx.c  tim_ctrl_gpx.h
controller/usart/: usart_controller.c  usart_controller.h
core/: CMakeLists.txt
core/ghf/: ghf.c  ghf.h
core/ghfc/: ghfc.h
dfu/: CMakeLists.txt
dfu/dust/: dust.c
dfu/stm32f722xx/boot_updater/: stm32f722xx_boot_updater.c  stm32f722xx_boot_updater.h
dfu/stm32f722xx/dust/: dust.c  dust.h
dfu/stm32f722xx/updater/: updater.c
dfu/updater/: updater.c  updater.h
doc/: requirements
drivers/: CMakeLists.txt
drivers/sensor/bmi270/: ll_bmi270_spi.c  ll_bmi270_spi.h
drivers/spi/: ll_spi.c  ll_spi.h
drivers/tim/: ll_tim.h  ll_tim_advx.c  ll_tim_advx.h  ll_tim_basex.c  ll_tim_basex.h  ll_tim_common.h  ll_tim_gpx.c  ll_tim_gpx.h
drivers/usart/: ll_usart.c  ll_usart.h
loader/: CMakeLists.txt
loader/apploader/: apploader.c  apploader.h
loader/bootloader/: bootloader.c  bootloader.h
loader/stm32f722xx/apploader/: apploader.c  apploader.h
loader/stm32f722xx/bootloader/: bootloader.c
modules/: CMakeLists.txt
modules/ahrs/: ahrs.c  ahrs.h
modules/cf/: cf.c  cf.h
modules/ghf/: ghf.c  ghf.h
modules/motor/: motor.c  motor.h
modules/pid/: pid.c  pid.h
modules/rc/: rc.c  rc.h
modules/sensor/bmi270/: bmi270.c  bmi270.h
modules/tim/: tim.c  tim.h
modules/vtol/: vtol.c  vtol.h
shared/: CMakeLists.txt  ghost_feather_common.h
shared/data_structure/: circular_buffer.c  circular_buffer.h
shared/ghost_feather_common/: ghost_feather_common.c  ghost_feather_common.h
shared/printf/: usart_printf.c  usart_printf.h
shared/timing/: timing.c  timing.h
startup/: CMakeLists.txt
startup/apploader/: apploader_startup.c
startup/bootloader/: bootloader_startup.c
startup/stm32f722xx/app/: app_startup.c  stm32722xx_app_bootloader_startup.c  stm32722xx_app_startup.c
startup/stm32f722xx/apploader/: apploader_startup.c
startup/stm32f722xx/boot_updater/: stm32f722xx_boot_updater_startup.c
startup/stm32f722xx/bootloader/: bootloader_startup.c
startup/stm32f722xx/first_bootloader/: stm32722xx_first_bootloader_startup.c
startup/stm32f722xx/second_bootloader/: stm32722xx_second_bootloader_startup.c
startup/updater/: updater_startup.c
submodules/: CMakeLists.txt
tests/gtest/: CMakeLists.txt  gtest_config_and_build.sh
tests/gtest/controller/bmi270/: CMakeLists.txt
tests/gtest/controller/bmi270/acc_get_x/: CMakeLists.txt  acc_get_x.cc
tests/gtest/controller/bmi270/acc_get_y/: CMakeLists.txt  acc_get_y.cc
tests/gtest/controller/bmi270/acc_get_z/: CMakeLists.txt  acc_get_z.cc
tests/gtest/controller/bmi270/acc_read/: CMakeLists.txt  acc_read.cc
tests/gtest/controller/bmi270/acc_set_x/: CMakeLists.txt  acc_set_x.cc
tests/gtest/controller/bmi270/acc_set_y/: CMakeLists.txt  acc_set_y.cc
tests/gtest/controller/bmi270/acc_set_z/: CMakeLists.txt  acc_set_z.cc
tests/gtest/controller/bmi270/acc_slf_tst/: CMakeLists.txt  acc_slf_tst.cc
tests/gtest/controller/bmi270/deinit/: CMakeLists.txt  deinit.cc
tests/gtest/controller/bmi270/dev_get/: CMakeLists.txt  dev_get.cc
tests/gtest/controller/bmi270/get_dev/: CMakeLists.txt  get_dev.cc
tests/gtest/controller/bmi270/get_pwr_mode_conf/: CMakeLists.txt  get_pwr_mode_conf.cc
tests/gtest/controller/bmi270/gyr_get_x/: CMakeLists.txt  gyr_get_x.cc
tests/gtest/controller/bmi270/gyr_get_y/: CMakeLists.txt  gyr_get_y.cc
tests/gtest/controller/bmi270/gyr_get_z/: CMakeLists.txt  gyr_get_z.cc
tests/gtest/controller/bmi270/gyr_read/: CMakeLists.txt  gyr_read.cc
tests/gtest/controller/bmi270/gyr_set_x/: CMakeLists.txt  gyr_set_x.cc
tests/gtest/controller/bmi270/gyr_set_y/: CMakeLists.txt  gyr_set_y.cc
tests/gtest/controller/bmi270/gyr_set_z/: CMakeLists.txt  gyr_set_z.cc
tests/gtest/controller/bmi270/gyr_slf_tst/: CMakeLists.txt  gyr_slf_tst.cc
tests/gtest/controller/bmi270/init/: CMakeLists.txt  init.cc
tests/gtest/controller/bmi270/pwr_mode_get_conf/: CMakeLists.txt  pwr_mode_get_conf.cc
tests/gtest/controller/bmi270/pwr_mode_set/: CMakeLists.txt  pwr_mode_set.cc
tests/gtest/controller/bmi270/soft_rst/: CMakeLists.txt  soft_rst.cc
tests/gtest/controller/bmi270/spi_ctrl_asg/: CMakeLists.txt  spi_ctrl_asg.cc
tests/gtest/controller/bmi270/stat_get/: CMakeLists.txt  stat_get.cc
tests/gtest/controller/bmi270/stat_set/: CMakeLists.txt  stat_set.cc
tests/gtest/controller/bmi270/temp_get/: CMakeLists.txt  temp_get.cc
tests/gtest/controller/bmi270/temp_read/: CMakeLists.txt  temp_read.cc
tests/gtest/controller/bmi270/temp_set/: CMakeLists.txt  temp_set.cc
tests/gtest/controller/spi/: CMakeLists.txt
tests/gtest/data_structure/circular_buffer/: CMakeLists.txt
tests/gtest/dfu/dust/: CMakeLists.txt
tests/gtest/hello_test/: CMakeLists.txt  hello_test.cc
vectortable/: CMakeLists.txt
vectortable/stm32f722xx/: stm32f722xx_vectortable.S  vectortable.S
vectortable/stm32f767xx/: stm32f767xx_vectortable.S
vectortable/stm32f767zi/: stm32f767zi_vectortable.S
(+144 files in other folders)
